--- a/PROTOTIPOS/Prototipo1/index.html
+++ b/PROTOTIPOS/Prototipo1/index.html
@@ -31,7 +31,7 @@
       <div class="galeriainferior">
         <div class="foto3">
           <p>01</p>
-          <img src="/images/bosquedron.jpg" alt="bbosque" />
+          <img src="/images/bosquedron.jpg" alt="bbosque" fgfgfg />
         </div>
 
         <div>
