--- a/PROTOTIPOS/Prototipo2/index.html
+++ b/PROTOTIPOS/Prototipo2/index.html
@@ -1,11 +1,25 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="tarjeta">
+
+        <h1>Discover the beauty around te world</h1>
+        <br>
+        <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget. Et integer facilisi eget diam.</h3>
+        <br>
+        <button>Explore</button>
+
+
+
+
+
+
+    </div>
 </body>
 </html>
