--- a/PROTOTIPOS/Prototipo2/index.html
+++ b/PROTOTIPOS/Prototipo2/index.html
@@ -15,8 +15,21 @@
         <br>
         <button>Explore</button>
 
+        <div class="imagesp2">
+            <div class="imagesf1">
+                <img src="imagesp2/p21.jpg" alt="1" class="img1">
+                <img src="imagesp2/p22.jpg" alt="2" class="img2">
+                <img src="imagesp2/p23.jpg" alt="3" class="img3">
+                <img src="imagesp2/p24.jpg" alt="4" class="img4">
+            </div>
 
-
+            <div class="imagesf2">
+                <img src="imagesp2/p25.jpg" alt="5" class="img5">
+                <img src="imagesp2/p26.jpg" alt="6" class="img6">
+                <img src="imagesp2/p27.jpg" alt="7" class="img7">
+                <img src="imagesp2/p28.jpg" alt="8" class="img8">
+            </div>
+        </div>
 
 
 
