--- a/PROTOTIPOS/Prototipo3/index.html
+++ b/PROTOTIPOS/Prototipo3/index.html
@@ -1,11 +1,24 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="es">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Prototipo3</title>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <div class="tarjeta">
+        <header>
+            <h1>Just that simple</h1>
+            <div class="h3butt">
+                <h3>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Faucibus in libero risus semper habitant arcu eget.</h3>
+                <button>Get started</button>
+            </div>
+        </header>
+            <img src="imagesp3/imgp3.jpg" alt="imgp3">
+        <main>
+        
+        </main>
+    </div>
 </body>
 </html>
